# PyPDFMerger

./: .gitignore  LICENSE  README.md  build.sh  file_select_dialog.py  installer.iss  interactive_list.py  pdf_to_icon.py  pypdfmerger.py  pyproject.toml  ty.toml  utils.py
.github/workflows/: lint.yml  release.yml
