[tool.poetry]
name = "pypdfmerger"
version = "1.2.0"
description = ""
authors = ["ludgerradke <radke@intervall.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.12"
pypdf2 = "^3.0.1"
pdf2image = "^1.16.2"
pyinstaller = "^5.11.0"
pymupdf = "^1.22.3"
pyqt6 = "^6.5.1"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
